--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             <p>© Sukhman Kang</p>
             <ul class="list-unstyled d-flex">
               <li class="ms-3 px-4"><a class="link-body-emphasis" href="https://github.com/Sukhman25K" target="_blank" aria-label="Github page link"><img id="imgGithub" src="Assets/github-dark.svg" height="40" alt="Github logo icon"></a></li>
-              <li class="ms-3 px-4"><a class="link-body-emphasis" href="https://www.linkedin.com/in/sukhman-kang-399b37215/" target="_blank" aria-label="LinkedIn profile link"><img id="imgLinkedin" src="Assets/linkedin-dark.svg" height="40" alt="LinkedIn logo icon"></a></li>
+              <li class="ms-3 px-4"><a class="link-body-emphasis" href="https://www.linkedin.com/in/sukhman-kang/" target="_blank" aria-label="LinkedIn profile link"><img id="imgLinkedin" src="Assets/linkedin-dark.svg" height="40" alt="LinkedIn logo icon"></a></li>
               <li class="ms-3 px-4"><a class="link-body-emphasis" href="mailto:sukhman.25k@gmail.com" aria-label="Email address link"><img id="imgEmail" src="Assets/envelope-at-dark.svg" height="40" alt="Email envlope icon"></a></li>
             </ul>
           </div>
