--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <a class="nav-link" href="#About me" aria-label="About section link">About</a>
           </li>
           <li class="nav-item">
-            <button id="btnColourMode" aria-label="Colour theme switcher" onclick="fnDarkMode()" type="button" class=" rounded-circle btn btn-light px-1 py-1 mt-1 mx-2"><img id="imgMoon" src="Assets/moon-dark.svg" height="30" alt="Moon icon">
+            <button id="btnColourMode" aria-label="Colour theme switcher" onclick="fnColourMode()" type="button" class=" rounded-circle btn btn-light px-1 py-1 mt-1 mx-2"><img id="imgMoon" src="Assets/moon-dark.svg" height="30" alt="Moon icon">
             </button>
           </li>
         </ul>
